<resources>
    <string name="app_name">Streaks</string>

    <!-- Navigation Strings -->
    <string name="title_todo">To Do</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="title_create_task">Create A Task</string>
    <string name="title_edit_task">Edit</string>

    <!-- To Do Fragment -->
    <string name="todo_header">To Do</string>

    <!-- Calendar Fragment -->
    <string name="calendar_header">Calendar</string>

    <!-- Profile Fragment -->
    <string name="profile_header">Profile</string>

    <!-- Create Task Fragment -->
    <string name="create_task_title_hint">Task Name</string>
    <string name="create_task_description_hint">Task Description</string>
    <string name="create_task_create_button">Create</string>

    <!-- Edit Task Fragment -->
    <string name="edit_task_title_hint">Task Name</string>
    <string name="edit_task_description_hint">Task Description</string>
    <string name="edit_task_create_button">Save</string>

</resources>
