<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_todo">

    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.ntsummers1.streaks.ui.todo.TodoFragment"
        android:label="@string/title_todo"
        tools:layout="@layout/fragment_todo" >
        <action
            android:id="@+id/action_navigation_todo_to_navigation_create_task"
            app:destination="@id/navigation_create_task"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.ntsummers1.streaks.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ntsummers1.streaks.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_create_task"
        android:name="com.ntsummers1.streaks.ui.tasks.CreateTaskFragment"
        android:label="@string/title_create_task" >
        <action
            android:id="@+id/action_navigation_create_task_to_navigation_todo"
            app:destination="@id/navigation_todo" />
    </fragment>
</navigation>